--- a/ServerTest3/.classpath
+++ b/ServerTest3/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/alex/Desktop/generated jar/SimpleLogging.jar"/>
+	<classpathentry kind="lib" path="Libs/SimpleLogging.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
